--- a/style.css
+++ b/style.css
@@ -6,29 +6,32 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    font-size: 14px;
     font-family: 'Inter';
     color:hsl(0, 0%, 100%);
     text-align: center;
     font-weight: 400;
 }
-body{
-    position: relative;
-    height: 100vh;
+
+body {
     max-width: 1440px;
-    min-width: 375px;
+    height: 100vh;
+    margin: 0;
     background-color: hsl(0, 0%, 8%);
 }
-.profile{
-    position: absolute;
-    left:50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    background-color: hsl(0, 0%, 12%);
-    width: 375px;
-    padding: 40px;
-    border-radius: 10px;
+.profile {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: fit-content;
+  background-color: hsl(0, 0%, 12%);
+  width: 90%;
+  max-width: 500px;
+  padding: 40px;
+  border-radius: 10px;
+  font-size: 18px;
 }
+
 
 /* Profile Image */
 .pic_profile{
@@ -46,7 +49,7 @@ body{
     margin-top: 10px;
 }
 #name{
-    font-size: 25px;
+    font-size: 32px;
     font-weight: 600;
 }
 #location_text{
@@ -62,9 +65,44 @@ body{
     gap: 20px;
 }
 button{
-    height: 40px;
+    align-self: center;
+    height: 50px;
     background-color: hsl(0, 0%, 20%);
     border: none;
     border-radius: 5px;
     font-weight: 700;
+    cursor: pointer;
+    font-size: 18px;
+    width: 80%;
+}
+
+/* Responsive */
+
+@media (max-width: 768px) {
+  .profile {
+    width: 90%;
+    padding: 40px;
+    border-radius: 10px;
+  }
+  button {
+    height: 50px;
+    width: 80%;
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 615px) {
+  .profile {
+    width: 100%;
+  }
+}
+
+@media (max-width: 540px){
+  .profile {
+    max-width: 350px;
+  }
+  button{
+    width: 100%;
+    height: 40px;
+  }
 }
