--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
   width: 100%;
   max-width: 60vh;
   padding: 4rem 1rem;
-  border-radius: 0.6;
+  border-radius: 0.6rem;
 }
 
 /* Profile Image */
